[package]
name = "rust-burnout-meter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
reqwest = "0.11"
reqwest-oauth1 = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.24.1", features = ["macros"] }

[dev-dependencies]
httpmock = "0.6"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# speed up compile time
[profile.dev]
debug = 0 # 0 is fastest, 2 is default, 3 is most debug info
incremental = true # default is true
lto = true
