[package]
name = "rust-burnout-meter"
version = "0.2.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = "0.11.4"
reqwest-oauth1 = "0.2.3"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["macros"] }
time = { version = "0.3.17", features = ["macros", "formatting", "parsing", "serde"] }

[dev-dependencies]
httpmock = "0.6.7"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0
incremental = true
lto = true
